--- a/UPM/MainWindow.xaml
+++ b/UPM/MainWindow.xaml
@@ -11,5 +11,24 @@
             <ColumnDefinition x:Name="Icons" Width="2*"></ColumnDefinition>
             <ColumnDefinition x:Name="AllInform" Width="8*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
+        <Grid Grid.Column="1" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*"></RowDefinition>
+                <RowDefinition Height="8*"></RowDefinition>
+                <RowDefinition Height="1*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="7*"></ColumnDefinition>
+                    <ColumnDefinition Width="3*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <ListView Grid.Column ="1">
+                    <ListViewItem>
+                        
+                    </ListViewItem>
+                </ListView>
+            </Grid>
+        </Grid>
     </Grid>
+    
 </Window>
