--- a/UPM/MainWindow.xaml
+++ b/UPM/MainWindow.xaml
@@ -18,16 +18,29 @@
                 <RowDefinition Height="1*"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid Grid.Row="0">
-
+                <StackPanel x:Name="Logo">
+                    <Image Source="Resourses\Basic resourses\Лого ТНС.jpg" Height="92" Width="88" RenderTransformOrigin="0.533,0.514"/>
+                </StackPanel>
             </Grid>
             <Grid Grid.Row="1"  >
-                <Image Source="Resourses\\CRM\\CRM.png" HorizontalAlignment="Center" Height="51" Margin="0,10,0,0" VerticalAlignment="Top" Width="49" RenderTransformOrigin="0.533,0.514"/>
-                <Image Source="Resourses\\CRM\\Абоненты.png" HorizontalAlignment="Center" Height="51" Margin="0,66,0,0" VerticalAlignment="Top" Width="49" RenderTransformOrigin="0.533,0.514"/>
-                <Image Source="Resourses\\CRM\\Активы.png" HorizontalAlignment="Left" Height="51" Margin="16,107,0,0" VerticalAlignment="Top" Width="49" RenderTransformOrigin="0.533,0.514"/>
-                <Image Source="Resourses\\CRM\\Биллинг.png" HorizontalAlignment="Left" Height="51" Margin="12,163,0,0" VerticalAlignment="Top" Width="49" RenderTransformOrigin="0.533,0.514"/>
-                <Image Source="Resourses\\CRM\\Поддержка пользователей.png" HorizontalAlignment="Left" Height="51" Margin="12,214,0,0" VerticalAlignment="Top" Width="49" RenderTransformOrigin="0.533,0.514"/>
-                <Image Source="Resourses\\CRM\\Управление обрудованием.png" HorizontalAlignment="Left" Height="51" Margin="16,268,0,0" VerticalAlignment="Top" Width="49" RenderTransformOrigin="0.533,0.514"/>
-
+                <StackPanel x:Name="CRM">
+                    <Image Source="Resourses\CRM\CRM.png" HorizontalAlignment="Center" Height="51" Margin="0,3,0,0" VerticalAlignment="Top" Width="48" RenderTransformOrigin="0.533,0.514"/>
+                </StackPanel>
+                <StackPanel x:Name="Абоненты">
+                    <Image Source="Resourses\CRM\Абоненты.png" HorizontalAlignment="Center" Height="31" Margin="0,59,0,0" VerticalAlignment="Top" Width="48" RenderTransformOrigin="0.533,0.514"/>
+                </StackPanel>
+                <StackPanel x:Name="Активы">
+                    <Image Source="Resourses\CRM\Активы.png" HorizontalAlignment="Center" Height="51" Margin="0,100,0,0" VerticalAlignment="Top" Width="48" RenderTransformOrigin="0.533,0.514"/>
+                </StackPanel>
+                <StackPanel  x:Name="Биллинг">
+                    <Image Source="Resourses\CRM\Биллинг.png" HorizontalAlignment="Center" Height="51" Margin="0,156,0,0" VerticalAlignment="Top" Width="48" RenderTransformOrigin="0.533,0.514"/>
+                </StackPanel>
+                <StackPanel  x:Name="Поддержкапользователей">
+                    <Image Source="Resourses\CRM\Поддержка пользователей.png" HorizontalAlignment="Center" Height="51" Margin="0,207,0,0" VerticalAlignment="Top" Width="48" RenderTransformOrigin="0.533,0.514"/>
+                </StackPanel>
+                <StackPanel  x:Name="Управлениеобрудованием">
+                    <Image Source="Resourses\\CRM\\Управление обрудованием.png" HorizontalAlignment="Center" Height="51" Margin="0,261,0,0" VerticalAlignment="Top" Width="48" RenderTransformOrigin="0.533,0.514"/>
+                </StackPanel>
             </Grid>
             <Grid Grid.Row="2">
 
@@ -72,7 +85,7 @@
 
                 </Grid>
             </Grid>
-            <ComboBox Name="UserEditing" Grid.Row="0" HorizontalAlignment="Left" Margin="359,24,0,0" VerticalAlignment="Top" Width="120"/>
+            <ComboBox Name="UserEditing" Grid.Row="0" HorizontalAlignment="Left" Margin="359,24,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="UserEditing_SelectionChanged"/>
             <TextBlock  Grid.Row="0" HorizontalAlignment="Left" Margin="35,0,0,0" TextWrapping="Wrap" Text="Абоненты ТНС" VerticalAlignment="Center"/>
             <Image x:Name="StaffFoto" Grid.Row="0" HorizontalAlignment="Left" Height="56" Margin="559,10,0,0" VerticalAlignment="Top" Width="63"/>
         </Grid>
