--- a/UPM/App.xaml
+++ b/UPM/App.xaml
@@ -4,6 +4,20 @@
              xmlns:local="clr-namespace:UPM"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="BtnStyle" TargetType="Button">
+            <Style.Setters>
+                <Setter Property="Margin" Value="10"/>
+                <Setter Property="Background" Value="#B5DEFA"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="Cursor" Value="Hand"/>
+            </Style.Setters>
+        </Style>
+        <Style x:Key="BtnMain" TargetType="Button" BasedOn="{StaticResource BtnStyle}">
+            <Style.Setters>
+                <Setter Property="Width" Value="100"/>
+                <Setter Property="Margin" Value="10"/>
+                <Setter Property="FontSize" Value="26"/>
+            </Style.Setters>
+        </Style>
     </Application.Resources>
 </Application>
