--- a/UPM/MainWindow.xaml
+++ b/UPM/MainWindow.xaml
@@ -4,91 +4,113 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UPM"
-        mc:Ignorable="d"
-        Title="Телеком Нева Связь" Height="450" Width="800" Icon="/Resourses/Basic resourses/image.ico">
+        mc:Ignorable="d" Icon="/Resources/Basic resourses/image.ico" Style="{StaticResource WindowsMain}"
+        Title="ООО «Телеком Нева Связь»" Height="800" Width="1250" MinHeight="800" MinWidth="1250">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition x:Name="Icons" Width="2*"></ColumnDefinition>
-            <ColumnDefinition x:Name="AllInform" Width="8*"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0">
+        <Grid Grid.Column="0" MouseEnter="Grid_MouseEnter" MouseLeave="Grid_MouseLeave" Background="White" x:Name="cd" Width="100" HorizontalAlignment="Left" Panel.ZIndex="1000">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="5"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel x:Name="spClose" Grid.Column="0">
+                <Image Source="/Resources/CRM/Лого ТНС.jpg" Width="80" Margin="5"/>
+                <Image Name="imSubscriber" Source="/Resources/CRM/Абоненты.png" Width="80" Height="60" Margin="5"/>
+                <Image Name="imEquipmentManagement" Source="/Resources/CRM/Управление обрудованием.jpg" Width="80" Height="60" Margin="5"/>
+                <Image Name="imAssets" Source="/Resources/CRM/Активы.png" Width="80" Height="60" Margin="5"/>
+                <Image Name="imBilling" Source="/Resources/CRM/Биллинг.jpg" Width="80" Height="60" Margin="5"/>
+                <Image Name="imUserSupport" Source="/Resources/CRM/Поддержка пользователей.jpg" Width="80" Height="60" Margin="5"/>
+                <Image Name="imCRM" Source="/Resources/CRM/CRM.png" Width="80" Height="60" Margin="5"/>
+            </StackPanel>
+            <StackPanel x:Name="spOpen" Grid.Column="0" Visibility="Collapsed">
+                <Image Source="/Resources/Basic resourses//Лого ТНС.jpg" Width="150" Margin="10"/>
+                <Label Name="lbSubscriber" Content="Абоненты" Background="LightGray" Margin="5" Padding="5" Height="60" Width="160" FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" MouseDown="lbSubscriber_MouseDown" Cursor="Hand"/>
+                <Label Name="lbEquipmentManagement" Background="LightGray" Margin="5" Padding="5" Height="60" Width="160" FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Cursor="Hand">
+                    <StackPanel>
+                        <TextBlock Text="Управление" HorizontalAlignment="Center"/>
+                        <TextBlock Text="оборудованием" HorizontalAlignment="Center"/>
+                    </StackPanel>
+                </Label>
+                <Label Name="lbAssets" Content="Активы" Background="LightGray" Margin="5" Padding="5" Height="60" Width="160" FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Cursor="Hand"/>
+                <Label Name="lbBilling" Content="Биллинг" Background="LightGray" Margin="5" Padding="5" Height="60" Width="160" FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Cursor="Hand"/>
+                <Label Name="lbUserSupport" Background="LightGray" Margin="5" Padding="5" Height="60" Width="160" FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Cursor="Hand">
+                    <StackPanel>
+                        <TextBlock Text="Поддержка" HorizontalAlignment="Center"/>
+                        <TextBlock Text="пользователей" HorizontalAlignment="Center"/>
+                    </StackPanel>
+                </Label>
+                <Label Name="lbCRM" Content="CRM" Background="LightGray" Margin="5" Padding="5" Height="60" Width="160" FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" MouseDown="lbCRM_MouseDown" Cursor="Hand"/>
+            </StackPanel>
+            <StackPanel VerticalAlignment="Bottom">
+                <Button Content="проф." FontSize="18" Margin="5"  HorizontalAlignment="Center" Width="60" Height="60"/>
+                <Button Content="?" Margin="5" FontWeight="Bold"  HorizontalAlignment="Center" Width="60" Height="60"/>
+            </StackPanel>
+            <Rectangle VerticalAlignment="Stretch" Fill="Black" Width="1" Grid.Column="1" HorizontalAlignment="Left" Margin="0"/>
+        </Grid>
+        <Grid Margin="100, 0, 0, 0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="2*"></RowDefinition>
-                <RowDefinition Height="8*"></RowDefinition>
-                <RowDefinition Height="1*"></RowDefinition>
+                <RowDefinition Height="150"/>
+                <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid Grid.Row="0">
-                <StackPanel x:Name="Logo">
-                    <Image Source="Resourses\Basic resourses\Лого ТНС.jpg" Height="92" Width="88" RenderTransformOrigin="0.533,0.514"/>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="500"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Name="tbHeader" VerticalAlignment="Center" FontSize="36" Margin="20"/>
+                <StackPanel Orientation="Horizontal" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <ComboBox Name="cbFIOEmployee" Width="420" VerticalAlignment="Center" SelectionChanged="cbFIOEmployee_SelectionChanged"/>
+                    <Rectangle RadiusX="100" RadiusY="100" Height="60" Width="60" Margin="5, 0, 0, 0">
+                        <Rectangle.Fill>
+                            <ImageBrush x:Name="imUser" Stretch="UniformToFill"/>
+                        </Rectangle.Fill>
+                    </Rectangle>
+                </StackPanel>
+                <StackPanel Grid.Column="1" Background="#FFEAEAEA" Width="240" VerticalAlignment="Bottom" HorizontalAlignment="Right">
+                    <Label Content="События" HorizontalContentAlignment="Center"/>
+                </StackPanel>
+                <StackPanel Grid.Column="0" Background="#FFEAEAEA" VerticalAlignment="Bottom" HorizontalAlignment="Stretch">
+                    <Rectangle HorizontalAlignment="Stretch" Fill="Black" Height="1" Grid.Column="1" Margin="0"/>
+                </StackPanel>
+                <StackPanel Grid.Column="1" Background="#FFEAEAEA" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" >
+                    <Rectangle HorizontalAlignment="Stretch" Fill="Black" Height="1" Grid.Column="1" Margin="0"/>
                 </StackPanel>
             </Grid>
-            <Grid Grid.Row="1"  >
-                <StackPanel x:Name="CRM">
-                    <Image Source="Resourses\CRM\CRM.png" HorizontalAlignment="Center" Height="51" Margin="0,3,0,0" VerticalAlignment="Top" Width="48" RenderTransformOrigin="0.533,0.514"/>
-                </StackPanel>
-                <StackPanel x:Name="Абоненты">
-                    <Image Source="Resourses\CRM\Абоненты.png" HorizontalAlignment="Center" Height="31" Margin="0,59,0,0" VerticalAlignment="Top" Width="48" RenderTransformOrigin="0.533,0.514"/>
-                </StackPanel>
-                <StackPanel x:Name="Активы">
-                    <Image Source="Resourses\CRM\Активы.png" HorizontalAlignment="Center" Height="51" Margin="0,100,0,0" VerticalAlignment="Top" Width="48" RenderTransformOrigin="0.533,0.514"/>
-                </StackPanel>
-                <StackPanel  x:Name="Биллинг">
-                    <Image Source="Resourses\CRM\Биллинг.png" HorizontalAlignment="Center" Height="51" Margin="0,156,0,0" VerticalAlignment="Top" Width="48" RenderTransformOrigin="0.533,0.514"/>
-                </StackPanel>
-                <StackPanel  x:Name="Поддержкапользователей">
-                    <Image Source="Resourses\CRM\Поддержка пользователей.png" HorizontalAlignment="Center" Height="51" Margin="0,207,0,0" VerticalAlignment="Top" Width="48" RenderTransformOrigin="0.533,0.514"/>
-                </StackPanel>
-                <StackPanel  x:Name="Управлениеобрудованием">
-                    <Image Source="Resourses\\CRM\\Управление обрудованием.png" HorizontalAlignment="Center" Height="51" Margin="0,261,0,0" VerticalAlignment="Top" Width="48" RenderTransformOrigin="0.533,0.514"/>
-                </StackPanel>
-            </Grid>
-            <Grid Grid.Row="2">
-
-            </Grid>
-        </Grid>
-        <Grid Grid.Column="1"   >
-            <Grid.RowDefinitions>
-                <RowDefinition Height="2*"></RowDefinition>
-                <RowDefinition Height="8*"></RowDefinition>
-                <RowDefinition Height="1*"></RowDefinition>
-            </Grid.RowDefinitions>
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="7*"></ColumnDefinition>
-                    <ColumnDefinition Width="3*"></ColumnDefinition>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="240"/>
                 </Grid.ColumnDefinitions>
-                <Grid Grid.Column="0">
+                <Frame x:Name="mainFrame" Grid.Column="0" NavigationUIVisibility="Hidden">
 
-
-                </Grid>
-                <Grid Grid.Column="1">
+                </Frame>
+                <Grid Grid.Column="1" Background="#FFEAEAEA">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="1*"></RowDefinition>
-                        <RowDefinition Height="8*"></RowDefinition>
-                        <RowDefinition Height="1*"></RowDefinition>
+                        <RowDefinition Height="30"/>
+                        <RowDefinition/>
+                        <RowDefinition Height="30"/>
                     </Grid.RowDefinitions>
-                    <Button Grid.Row="0"></Button>
-                    <Button Grid.Row="2"></Button>
-
-                    <ListView x:Name="ListInform" Grid.Row ="1">
+                    <StackPanel x:Name="btnUp" Grid.Row="0" MouseUp="btnUp_MouseDown" Background="#FFEAEAEA">
+                        <Polyline Stroke="Black" Points="0, 15, 15, 5, 30, 15" HorizontalAlignment="Center"/>
+                    </StackPanel>
+                    <ListView x:Name="lvEvents" Grid.Row="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" Background="#FFEAEAEA">
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="HorizontalContentAlignment" Value="Center" />
+                            </Style>
+                        </ListView.ItemContainerStyle>
                         <ListView.ItemTemplate>
                             <DataTemplate>
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="100" />
-                                    </Grid.RowDefinitions>
-                                    <TextBlock Text="{Binding Description}" Grid.Column="0" />
+                                <Grid Background="LightGray" Width="220">
+                                    <TextBlock Text="{Binding Description}" TextWrapping="Wrap" HorizontalAlignment="Center" Margin="5" VerticalAlignment="Center"/>
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
-
+                    <StackPanel Grid.Row="2" MouseDown="btnDown_MouseDown" Background="#FFEAEAEA">
+                        <Polyline x:Name="btnDown" Stroke="Black" Points="0, 15, 15, 25, 30, 15" HorizontalAlignment="Center"/>
+                    </StackPanel>
                 </Grid>
             </Grid>
-            <ComboBox Name="UserEditing" Grid.Row="0" HorizontalAlignment="Left" Margin="359,24,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="UserEditing_SelectionChanged"/>
-            <TextBlock  Grid.Row="0" HorizontalAlignment="Left" Margin="35,0,0,0" TextWrapping="Wrap" Text="Абоненты ТНС" VerticalAlignment="Center"/>
-            <Image x:Name="StaffFoto" Grid.Row="0" HorizontalAlignment="Left" Height="56" Margin="559,10,0,0" VerticalAlignment="Top" Width="63"/>
         </Grid>
     </Grid>
-
 </Window>
