--- a/UPM/Pages/Abonent.xaml
+++ b/UPM/Pages/Abonent.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="UPM.Subscribe"
+﻿<Page x:Class="UPM.Abonent"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:UPM"
-      mc:Ignorable="d" 
+      mc:Ignorable="d" Style="{StaticResource PageMain}"
       d:DesignHeight="850" d:DesignWidth="900" Margin="10"
       Title="Подробное описание абонента">
     <Grid>
@@ -23,10 +23,10 @@
                     </Grid.ColumnDefinitions>
                     <TextBlock Name="tbSurname" Text="Фамилия: " HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="0"/>
                     <TextBlock Name="tbName" Text="Имя: " HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="1"/>
-                    <TextBlock Name="tbPatronymic" Text="Отчество: " HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="2"/>
+                    <TextBlock Name="tbPatronumic" Text="Отчество: " HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="2"/>
                 </Grid>
                 <TextBlock x:Name="tbPlace0fResidence" Text="Адрес прописки: " TextWrapping="Wrap"/>
-                <TextBlock x:Name="tbResidentialAddress" Text="Адрес проживания: " TextWrapping="Wrap"/>
+                <TextBlock x:Name="tbFactAdress" Text="Адрес проживания: " TextWrapping="Wrap"/>
                 <GroupBox Header="Паспортные данные" Margin="0, 10, 0, 10">
                     <StackPanel>
                         <Grid>
@@ -77,12 +77,12 @@
                     <TextBlock Name="listEquipments" TextWrapping="Wrap"/>
                 </GroupBox>
                 <GroupBox Header="История обращения в техническую поддержку за 12 месяцев" Margin="0, 10, 0, 10">
-                    <TextBlock Name="listCRM" TextWrapping="Wrap"/>
+                    <TextBlock Name="listRequest" TextWrapping="Wrap"/>
                 </GroupBox>
             </StackPanel>
         </ScrollViewer>
         <Grid Grid.Row="2">
-            <Button x:Name="btnBack" Content="Назад"  HorizontalAlignment="Left" Width="100" Height="40" Click="btnBack_Click" Cursor="Hand"/>
+            <Button x:Name="btnBack" Content="Назад" Template="{StaticResource CTButonMainPage}" Style="{StaticResource BtnStyle}" HorizontalAlignment="Left" Width="100" Height="40" Click="btnBack_Click" Cursor="Hand"/>
         </Grid>
     </Grid>
 </Page>
