--- a/UPM/Pages/AbonentList.xaml
+++ b/UPM/Pages/AbonentList.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="UPM.SubscribersList"
+﻿<Page x:Class="UPM.AbonentList"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:UPM"
-      mc:Ignorable="d" 
+      mc:Ignorable="d" Style="{StaticResource PageMain}"
       d:DesignHeight="450" d:DesignWidth="900"
       Title="Абоненты ТНС">
     <Grid>
@@ -27,28 +27,28 @@
             </StackPanel>
             <StackPanel Orientation="Vertical" Grid.Column="1" Margin="10">
                 <TextBlock Text="Район" HorizontalAlignment="Center"/>
-                <ComboBox x:Name="cbFilterRaion" SelectionChanged="cbFilterRaion_SelectionChanged"/>
+                <ComboBox x:Name="cbFilterDistrict" SelectionChanged="cbFilterDistrict_SelectionChanged"/>
             </StackPanel>
             <StackPanel Orientation="Vertical" Grid.Column="2" Margin="10">
                 <TextBlock Text="Улица" HorizontalAlignment="Center"/>
-                <ComboBox x:Name="cbFilterStreet"/>
+                <ComboBox x:Name="cbFilterStreet" SelectionChanged="cbFilterStreet_SelectionChanged"/>
             </StackPanel>
             <StackPanel Orientation="Vertical" Grid.Column="3" Margin="10">
                 <TextBlock Text="Номер дома" HorizontalAlignment="Center"/>
-                <ComboBox x:Name="cbFiltNomerHouse"/>
+                <ComboBox x:Name="cbFiltNomerHouse" SelectionChanged="cbFiltNomerHouse_SelectionChanged"/>
             </StackPanel>
             <StackPanel Orientation="Vertical" Grid.Column="4" Margin="10">
                 <TextBlock Text="Лицевой счет" HorizontalAlignment="Center"/>
-                <TextBox x:Name="tbSearchPersonalAccount" SelectionChanged="tbSearchSurname_SelectionChanged"/>
+                <TextBox x:Name="tbSearchPersonalAccount" SelectionChanged="tbSearchSurname_SelectionChanged" PreviewTextInput="tbSearchPersonalAccount_PreviewTextInput"/>
             </StackPanel>
         </Grid>
-        <DataGrid Name="dgSubscribers" Grid.Row="1" Margin="10" FontSize="18" AutoGenerateColumns="False" CanUserAddRows="False" MouseDoubleClick="dgSubscribers_MouseDoubleClick">
+        <DataGrid Name="dgAbonent" Grid.Row="1" Margin="10" FontSize="18" AutoGenerateColumns="False" CanUserAddRows="False" MouseDoubleClick="dgAbonent_MouseDoubleClick">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Номер" Binding="{Binding SubscriberNomer}" Width="1*"></DataGridTextColumn>
-                <DataGridTextColumn Header="ФИО" Binding="{Binding FIO}" Width="2*"></DataGridTextColumn>
-                <DataGridTextColumn Header="Номер договора" Binding="{Binding Contract.ContractNumber}" Width="2*"></DataGridTextColumn>
-                <DataGridTextColumn Header="ЛС" Binding="{Binding  Contract.PersonalAccount}" Width="1*"></DataGridTextColumn>
-                <DataGridTextColumn Header="Услуги" Binding="{Binding  ListServices}" Width="2*"></DataGridTextColumn>
+                <DataGridTextColumn IsReadOnly="True" Header="Номер" Binding="{Binding AbonentNomer}" Width="1*"></DataGridTextColumn>
+                <DataGridTextColumn IsReadOnly="True" Header="ФИО"  Binding="{Binding FIO }" Width="2*"></DataGridTextColumn>
+                <DataGridTextColumn IsReadOnly="True" Header="Номер договора" Binding="{Binding Contract.ContractNumber}" Width="2*"></DataGridTextColumn>
+                <DataGridTextColumn IsReadOnly="True" Header="ЛС" Binding="{Binding  Contract.PersonalAccount}" Width="1*"></DataGridTextColumn>
+                <DataGridTextColumn IsReadOnly="True" Header="Услуги" Binding="{Binding  ListServices}" Width="2*"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
         <Grid Grid.Row="2">
